--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
