--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "recharts": "^2.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
